Add style="width:500px" to all recipe images

--- a/recipes/cherry-dump-cake.html
+++ b/recipes/cherry-dump-cake.html
@@ -1,5 +1,5 @@
 <h1>Cherry Dump Cake</h1>
-<img src="../images/cherry-dump-cake.jpeg" alt="A picture of cherry dump cake">
+<img src="../images/cherry-dump-cake.jpeg" alt="A picture of cherry dump cake" style="width:500px">
 <h2>Description</h2>
 <p>Amazingly easy and amazingly good... too good! This is my mother-in-law's recipe that was just recently shared. It would be a shame not to share it. Best served warm and with vanilla ice cream (of course).</p>
 <h2>Ingredients</h2>
