--- a/recipes/creamy-garlic-pasta.html
+++ b/recipes/creamy-garlic-pasta.html
@@ -1,5 +1,5 @@
 <h1>Creamy Garlic Pasta</h1>
-<img src="../images/creamy-garlic-pasta.jpeg" alt="A picture of creamy garlic pasta">
+<img src="../images/creamy-garlic-pasta.jpeg" alt="A picture of creamy garlic pasta" style="width:500px">
 <h2>Description</h2>
 <p>As far as creamy pasta recipes, this is the best I have ever had. Add prawns and/or scallops to make an amazing seafood Alfredo.</p>
 <h2>Ingredients</h2>
