--- a/recipes/honey-garlic-slow-cooker-chicken-thighs.html
+++ b/recipes/honey-garlic-slow-cooker-chicken-thighs.html
@@ -1,5 +1,5 @@
 <h1>Honey-Garlic Slow Cooker Chicken Thighs</h1>
-<img src="../images/honey-garlic-slow-cooker-chicken-thighs.jpeg" alt="A picture of honey-garlic slow cooker chicken">
+<img src="../images/honey-garlic-slow-cooker-chicken-thighs.jpeg" alt="A picture of honey-garlic slow cooker chicken" style="width:500px">
 <h2>Description</h2>
 <p>I have used it often. It's easy and uses pantry staples. Always a hit with adults and kids. Serve with basmati rice or quinoa and steamed or roasted vegetables.</p>
 <h2>Ingredients</h2>
